--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,13 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.firebase:firebase-database:19.4.0'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.android.support:appcompat-v7:27.0.0'
+
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.android.support:support-v4:27.0.0'
 
 }
